--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "preinstall": "npx -y only-allow pnpm"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.20",
@@ -20,10 +21,12 @@
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.20"
+    "@docusaurus/module-type-aliases": "2.0.0-beta.20",
+    "@types/react": "^18.0.9"
   },
   "browserslist": {
     "production": [
