Add Tegral Catalog base

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include 'tegral-core'
 include 'tegral-di:tegral-di-core', 'tegral-di:tegral-di-test'
 include 'tegral-web:tegral-web-appdsl'
+include 'tegral-catalog'
