--- a/samples/stage-1/build.gradle
+++ b/samples/stage-1/build.gradle
@@ -1,6 +1,11 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.jvm' version "1.6.20"
     id 'application'
+}
+
+repositories {
+    mavenCentral()
+    mavenLocal()
 }
 
 application {
