--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,8 @@
-include 'tegral-core'
-include 'tegral-di:tegral-di-core', 'tegral-di:tegral-di-test'
-include 'tegral-web:tegral-web-appdsl'
 include 'tegral-catalog'
+include 'tegral-config:tegral-config-core'
+include 'tegral-core'
+include 'tegral-di:tegral-di-core', 'tegral-di:tegral-di-test', 'tegral-di:tegral-di-services'
+include 'tegral-featureful'
+include 'tegral-logging'
+include 'tegral-services:tegral-services-api', 'tegral-services:tegral-services-feature'
+include 'tegral-web:tegral-web-appdefaults', 'tegral-web:tegral-web-appdsl', 'tegral-web:tegral-web-config', 'tegral-web:tegral-web-controllers'
