--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation libs.kotlin.stdlib
+    api libs.kotlin.stdlib
 
     testImplementation libs.kotlin.test
     testImplementation libs.kotlin.test.junit5
@@ -29,5 +29,11 @@ testing {
             // Use JUnit Jupiter test framework
             useJUnitJupiter()
         }
+    }
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+    kotlinOptions {
+        jvmTarget = "11"
     }
 }
