--- a/tegral-web/tegral-web-appdsl/build.gradle
+++ b/tegral-web/tegral-web-appdsl/build.gradle
@@ -8,4 +8,11 @@ ext.includeInBundles = ["web"]
 
 dependencies {
     api project(":tegral-di:tegral-di-core")
+    api project(":tegral-config:tegral-config-core")
+    api project(":tegral-featureful")
+    api project(":tegral-web:tegral-web-controllers")
+    api project(":tegral-web:tegral-web-appdefaults")
+
+    implementation libs.kotlin.stdlib
+    implementation libs.kotlin.reflect
 }
