--- a/tegral-di/tegral-di-test/build.gradle
+++ b/tegral-di/tegral-di-test/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'guru.zoroark.tegral.kotlin-common-conventions'
+    id 'guru.zoroark.tegral.kotlin-published-library-conventions'
 }
+
+ext.includeInBundles = ["web.test"]
 
 dependencies {
     api project(":tegral-di:tegral-di-core")
