--- a/tegral-catalog/build.gradle
+++ b/tegral-catalog/build.gradle
@@ -42,6 +42,8 @@ def setupTask = task "setupVersionCatalog" {
                     library(name, dependency)
                 }
 
+                print(exportedBundles)
+
                 for (bundleEntry in exportedBundles.entrySet()) {
                     def bundleName = bundleEntry.getKey()
                     def bundleLibraries = bundleEntry.getValue()
