--- a/tegral-di/tegral-di-test/build.gradle
+++ b/tegral-di/tegral-di-test/build.gradle
@@ -2,12 +2,13 @@ plugins {
     id 'guru.zoroark.tegral.kotlin-published-library-conventions'
 }
 
-ext.includeInBundles = ["web.test"]
+ext.includeInBundles = ["web-test"]
 
 dependencies {
     api project(":tegral-di:tegral-di-core")
     implementation libs.kotlin.reflect
-    implementation libs.kotlin.test
+    api libs.kotlin.test
+    implementation libs.kotlin.coroutines
 
     testImplementation libs.mockk
 }
