Add versions plugin and bump versions

--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'guru.zoroark.tegral.kotlin-common-conventions'
+    id 'org.jetbrains.dokka'
 }
 
 project.ext.includeInCatalog = true
