Add Detekt config for published libs

--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
@@ -4,3 +4,8 @@ plugins {
 }
 
 project.ext.includeInCatalog = true
+
+detekt {
+    config = files(rootProject.layout.projectDirectory.file("detekt-config.published.yaml"))
+    buildUponDefaultConfig = true
+}
