Add proper building toolchain for KDoc + website

--- a/build.gradle
+++ b/build.gradle
@@ -2,5 +2,9 @@ plugins {
     id 'org.jetbrains.dokka'
 }
 
+repositories {
+    mavenCentral()
+}
+
 group = "guru.zoroark.tegral"
 version = "0.0.1-SNAPSHOT"
