--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -13,7 +13,8 @@ dependencies {
         libs.plugins.detekt,
         libs.plugins.versions,
         libs.plugins.gradleTestLogger,
-        libs.plugins.kotlinBcv
+        libs.plugins.kotlinBcv,
+        libs.plugins.nodeGradle
     ]
 
     for (pluginDef in pluginsDef) {
