--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           cache: 'pnpm'
+          cache-dependency-path: docs/pnpm-lock.yaml
       - run: npm i -g pnpm
       - run: pnpm install
         working-directory: docs
