--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
       - run: ./gradlew check --no-daemon
 
   build-docs:
-    name: "Build docs"
+    name: "Build & deploy docs"
     needs: [validate-wrapper]
     runs-on: ubuntu-latest
     steps:
@@ -44,3 +44,11 @@ jobs:
       - run: pnpm build
         working-directory: docs
       - run: ./gradlew :website:assembleFiles --no-daemon
+      - run: npm i -g vercel
+      - uses: BetaHuhn/deploy-to-vercel-action@v1.9.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          PRODUCTION: "false"
