--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: gradle/wrapper-validation-action@v1
   check:
-    name: "Gradle check"
+    name: "Run tests & checks"
     runs-on: ubuntu-latest
     needs: [validate-wrapper]
     steps:
@@ -25,9 +25,15 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - run: ./gradlew check --no-daemon
+      - name: Generate documentation
+        run: ./gradlew :website:rewriteDokkaLinks --no-daemon
+      - uses: actions/upload-artifact@v3
+        with:
+          name: dokka-output
+          path: website/build/dokkaHtml
 
   build-docs:
-    name: "Build & deploy docs"
+    name: "Build Docusaurus"
     needs: [validate-wrapper]
     runs-on: ubuntu-latest
     steps:
@@ -41,10 +47,34 @@ jobs:
       - run: npm i -g pnpm
       - run: pnpm install
         working-directory: docs
-      - run: pnpm build
-        working-directory: docs
+      - run: ./gradlew :docs:docusaurusBuild --no-daemon
+      - uses: actions/upload-artifact@v3
+        with:
+          name: docusaurus-output
+          path: docs/build
+   
+  build-deploy-website:
+    name: Build and deploy website
+    needs: [validate-wrapper, build-docs, check]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+      # TODO maybe unnecessary
+      - uses: actions/setup-node@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: dokka-output
+          path: website/build/dokkaHtml
+      - uses: actions/download-artifact@v3
+        with:
+          name: docusaurus-output
+          path: docs/build
       - run: ./gradlew :website:assembleFiles --no-daemon
-      - run: npm i -g vercel
       - uses: BetaHuhn/deploy-to-vercel-action@v1.9.1
         with:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
