--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,12 +20,16 @@ jobs:
     needs: [validate-wrapper]
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
-      - run: ./gradlew check --no-daemon
+          distribution: "temurin"
+          java-version: "17"
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - run: ./gradlew check
 
   build-dokka:
     name: "Generate Dokka files"
@@ -33,17 +37,23 @@ jobs:
     needs: [validate-wrapper]
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
+          distribution: "temurin"
+          java-version: "17"
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
       - name: Generate Dokka documentation
-        run: ./gradlew :website:rewriteDokkaLinks --no-daemon
+        run: ./gradlew :website:rewriteDokkaLinks
+
       - uses: actions/upload-artifact@v3
         with:
           name: dokka-output
           path: website/build/dokkaHtml
+          retention-days: 3
 
   build-docs:
     name: "Build Docusaurus"
@@ -51,46 +61,58 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
       - uses: actions/setup-node@v3
+
       - run: npm i -g pnpm
+
       - run: pnpm install
         working-directory: docs
-      - name: Build Docusaurus site
-        run: ./gradlew :docs:docusaurusBuild --no-daemon
+
+      - run: pnpm run build
+        working-directory: docs
+
       - uses: actions/upload-artifact@v3
         with:
           name: docusaurus-output
           path: docs/build
-   
+          retention-days: 3
+
   build-deploy-website:
-    name: Build and deploy website
-    needs: [validate-wrapper, build-docs, build-dokka]
+    name: Assemble and deploy website
+    needs: [validate-wrapper, build-docs, build-dokka, check]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
+          distribution: "temurin"
+          java-version: "17"
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
       # TODO maybe unnecessary
       - uses: actions/setup-node@v3
-      - uses: actions/download-artifact@v3
+
+      - name: Download Dokka build
+        uses: actions/download-artifact@v3
         with:
           name: dokka-output
           path: website/build/dokkaHtml
-      - uses: actions/download-artifact@v3
+
+      - name: Download Docusaurus build
+        uses: actions/download-artifact@v3
         with:
           name: docusaurus-output
           path: docs/build
+
       # -x parameters ensure that we use output from previous builds and that we do not re-run the builds here
-      - run: ./gradlew :website:assembleFiles --no-daemon -x :website:rewriteDokkaLinks -x :docs:docusaurusBuild
-      - uses: BetaHuhn/deploy-to-vercel-action@v1.9.1
+      - name: Assemble website files
+        run: ./gradlew :website:assembleFiles -x :website:rewriteDokkaLinks -x :docs:docusaurusBuild
+
+      - name: Deploy to Vercel
+        uses: BetaHuhn/deploy-to-vercel-action@v1.9.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
