--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -119,3 +119,4 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           WORKING_DIRECTORY: "website/build/output"
+          PR_LABELS: "false"
