--- a/tegral-di/tegral-di-core/build.gradle
+++ b/tegral-di/tegral-di-core/build.gradle
@@ -6,3 +6,7 @@ dependencies {
     api project(":tegral-core")
     implementation libs.kotlin.reflect
 }
+
+ext.humanName = "Tegral DI Core"
+ext.description = "Main Tegral DI module for use in main source code -- dependency injection framework for Kotlin."
+ext.url = "https://tegral.zoroark.guru/docs/core/di"
