--- a/tegral-di/tegral-di-services/build.gradle
+++ b/tegral-di/tegral-di-services/build.gradle
@@ -8,3 +8,7 @@ dependencies {
     implementation libs.kotlin.coroutines
     api project(":tegral-services:tegral-services-api")
 }
+
+ext.humanName = "Tegral DI Services"
+ext.description = "Extension for Tegral DI that provides necessary tooling and hooks for integrating Tegral Services in a Tegral DI environment."
+ext.url = "https://tegral.zoroark.guru/docs/core/di/extensions/services"
