--- a/tegral-featureful/build.gradle
+++ b/tegral-featureful/build.gradle
@@ -6,3 +6,7 @@ dependencies {
     api project(":tegral-di:tegral-di-core")
     api project(":tegral-config:tegral-config-core")
 }
+
+ext.humanName = "Tegral Featureful"
+ext.description = "Contains common classes for writing Tegral features that will get integrated in main applications."
+ext.url = "https://tegral.zoroark.guru/docs/core/featureful"
