--- a/tegral-services/tegral-services-api/build.gradle
+++ b/tegral-services/tegral-services-api/build.gradle
@@ -1,3 +1,7 @@
 plugins {
     id 'guru.zoroark.tegral.kotlin-published-library-conventions'
 }
+
+ext.humanName = "Tegral Services API"
+ext.description = "API interfaces you can subclass to create services that will be handled by Tegral."
+ext.url = "https://tegral.zoroark.guru/docs/core/services/"
