--- a/tegral-web/tegral-web-config/build.gradle
+++ b/tegral-web/tegral-web-config/build.gradle
@@ -5,3 +5,7 @@ plugins {
 dependencies {
     api project(":tegral-config:tegral-config-core")
 }
+
+ext.humanName = "Tegral Web Config"
+ext.description = "Provides the necessary configuration sections for Tegral Web apps."
+ext.url = "https://tegral.zoroark.guru/docs/web/config"
