--- a/tegral-config/tegral-config-core/build.gradle
+++ b/tegral-config/tegral-config-core/build.gradle
@@ -11,3 +11,7 @@ dependencies {
 
     testImplementation libs.jimfs
 }
+
+ext.humanName = "Tegral Config Core"
+ext.description = "Provides core configuration mechanisms with Hoplite"
+ext.url = "https://tegral.zoroark.guru/docs/core/config"
