--- a/tegral-di/tegral-di-test-mockk/build.gradle
+++ b/tegral-di/tegral-di-test-mockk/build.gradle
@@ -8,3 +8,7 @@ dependencies {
     api project(":tegral-di:tegral-di-test")
     api libs.mockk
 }
+
+ext.humanName = "Tegral DI Test MockK"
+ext.description = "Provides integration between Tegral DI and MockK for test code."
+ext.url = "https://tegral.zoroark.guru/docs/core/di/testing"
