--- a/tegral-services/tegral-services-feature/build.gradle
+++ b/tegral-services/tegral-services-feature/build.gradle
@@ -6,3 +6,7 @@ dependencies {
     api project(":tegral-di:tegral-di-services")
     api project(":tegral-featureful")
 }
+
+ext.humanName = "Tegral Services Feature"
+ext.description = "Tegral feature used to load, start and manage Tegral services."
+ext.url = "https://tegral.zoroark.guru/docs/core/services/"
