--- a/tegral-web/tegral-web-appdefaults/build.gradle
+++ b/tegral-web/tegral-web-appdefaults/build.gradle
@@ -10,3 +10,7 @@ dependencies {
     implementation libs.jackson.time
     implementation libs.ktor.server.netty
 }
+
+ext.humanName = "Tegral Web AppDefaults"
+ext.description = "Provides basic versions of all necessary classes in a Tegral Web environment."
+ext.url = "https://tegral.zoroark.guru/docs/web/appdefaults"
