--- a/tegral-web/tegral-web-controllers/build.gradle
+++ b/tegral-web/tegral-web-controllers/build.gradle
@@ -12,3 +12,7 @@ dependencies {
     api libs.ktor.server.contentNegotiation
     api libs.ktor.serialization.jackson
 }
+
+ext.humanName = "Tegral Web Controllers"
+ext.description = "Provides necessary classes to integrate the Ktor framework into a Tegral Web application."
+ext.url = "https://tegral.zoroark.guru/docs/web/controllers"
