--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [main, publish-setup]
+    branches: [main]
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -145,6 +145,7 @@ jobs:
         run: ./gradlew -PpublishSnapshot -Psign publish
 
   publish-release:
+    name: Publish release
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
     needs: [ validate-wrapper, check, publish-snapshot ]
