--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -120,6 +120,7 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           WORKING_DIRECTORY: "website/build/output"
           PR_LABELS: "false"
+          PRODUCTION: "${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}"
 
   publish-snapshot:
     name: Publish snapshot
@@ -148,7 +149,7 @@ jobs:
     name: Publish release
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
-    needs: [ validate-wrapper, check, publish-snapshot ]
+    needs: [ validate-wrapper, check, publish-snapshot, build-deploy-website ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
