--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,7 +125,7 @@ jobs:
 
   publish-snapshot:
     name: Publish snapshot
-    if: "github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/'))"
+    if: "github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
     needs: [validate-wrapper, check]
     steps:
@@ -150,7 +150,7 @@ jobs:
     name: Publish release
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
-    needs: [ validate-wrapper, check, publish-snapshot, build-deploy-website ]
+    needs: [ validate-wrapper, check, build-deploy-website ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
