Move environment tests to tegral-di-test
Fixes #14

--- a/tegral-di/tegral-di-core/build.gradle
+++ b/tegral-di/tegral-di-core/build.gradle
@@ -5,6 +5,8 @@ plugins {
 dependencies {
     api project(":tegral-core")
     implementation libs.kotlin.reflect
+
+    testImplementation project(":tegral-di:tegral-di-test")
 }
 
 ext.humanName = "Tegral DI Core"
