--- a/tegral-web/tegral-web-controllers-test/build.gradle
+++ b/tegral-web/tegral-web-controllers-test/build.gradle
@@ -7,8 +7,10 @@ ext.includeInBundles = ["web-test"]
 dependencies {
     api project(":tegral-web:tegral-web-controllers")
     api project(":tegral-di:tegral-di-test")
+    api project(":tegral-web:tegral-web-appdefaults")
 
     api libs.ktor.server.test
+    api libs.ktor.client.contentNegotiation
 }
 
 ext.humanName = "Tegral Web Controllers Test"
