--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,13 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - run: ./gradlew check
+      - name: Run checks and tests
+        run: ./gradlew check
+
+      - name: Upload code coverage to CodeCov
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./**/build/reports/jacoco/test/jacocoTestReport.xml
 
   build-dokka:
     name: "Generate Dokka files"
