Import tests from Shedinja
(and add some missing tests)

--- a/tegral-web/tegral-web-appdefaults/build.gradle
+++ b/tegral-web/tegral-web-appdefaults/build.gradle
@@ -9,6 +9,9 @@ dependencies {
     api project(":tegral-logging")
     implementation libs.jackson.time
     implementation libs.ktor.server.netty
+
+    testImplementation project(":tegral-di:tegral-di-test")
+    testImplementation project(":tegral-di:tegral-di-test-mockk")
 }
 
 ext.humanName = "Tegral Web AppDefaults"
