--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,27 @@ jobs:
         with:
           files: "${{ steps.glob-jacoco-reports.outputs.paths }}"
 
+  check-examples:
+    name: "Check examples"
+    runs-on: ubuntu-latest
+    needs: [validate-wrapper]
+    strategy:
+      matrix:
+        example: ["step-1", "step-2"]
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          java-version: "17"
+      
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      
+      - name: Run check on example
+        run: ./gradlew -p "examples/tutorial/${{ matrix.example }}" check --include-build ../../..
+
   build-dokka:
     name: "Generate Dokka files"
     runs-on: ubuntu-latest
@@ -93,7 +114,7 @@ jobs:
 
   build-deploy-website:
     name: Assemble and deploy website
-    needs: [validate-wrapper, build-docs, build-dokka, check]
+    needs: [validate-wrapper, build-docs, build-dokka, check, check-examples]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -140,7 +161,7 @@ jobs:
     name: Publish snapshot
     if: "github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
-    needs: [validate-wrapper, check]
+    needs: [validate-wrapper, check, check-examples]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
