--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,4 @@ repositories {
 }
 
 group = "guru.zoroark.tegral"
-version = "0.0.2-SNAPSHOT"
+version = rootProject.file('version.txt').text.trim()
