--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,9 @@ jobs:
       
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
+      - name: Publish catalog to local Maven repo
+        run: "./gradlew :tegral-catalog:publishToMavenLocal"
       
       - name: Run check on example
         run: ./gradlew -p "examples/tutorial/${{ matrix.example }}" check --include-build ../../..
