Add missing mavenLocal from example 1

--- a/examples/tutorial/step-1/settings.gradle
+++ b/examples/tutorial/step-1/settings.gradle
@@ -4,6 +4,8 @@ include('app')
 dependencyResolutionManagement {
     repositories {
         mavenCentral()
+        mavenLocal() // Delete this line if you want to run this example outside
+                     // of the Tegral source code.
     }
 
     versionCatalogs {
