--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+// NOTE: When adding projects here, do not forget to also add them as dependencies in the 'code-coverage' project!
 include 'tegral-catalog',
         'tegral-config:tegral-config-core',
         'tegral-core',
@@ -18,5 +19,6 @@ include 'tegral-catalog',
 
 include 'examples:simple-json-api'
 
+include 'code-coverage'
 include 'docs'
 include 'website'
