Add tests for controller

--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-common-conventions.gradle
@@ -15,6 +15,7 @@ dependencies {
     api libs.kotlin.stdlib
 
     testImplementation libs.kotlin.test
+    testImplementation libs.mockk
     testImplementation libs.kotlin.test.junit5
     testImplementation libs.junit.jupiterApi
     testRuntimeOnly libs.junit.jupiterEngine
