--- a/docs/package.json
+++ b/docs/package.json
@@ -20,10 +20,13 @@
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "docusaurus-plugin-ackee": "^0.0.0",
+    "mdx-mermaid": "^1.2.3",
+    "mermaid": "9.1",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "unist-util-visit": "^2.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.21",
