--- a/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
+++ b/buildSrc/src/main/groovy/guru.zoroark.tegral.kotlin-published-library-conventions.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'guru.zoroark.tegral.kotlin-common-conventions'
     id 'guru.zoroark.tegral.publish-conventions'
     id 'org.jetbrains.dokka'
+    id 'org.jetbrains.kotlinx.binary-compatibility-validator'
     id 'maven-publish'
     id 'signing'
 
