--- a/tegral-core/build.gradle
+++ b/tegral-core/build.gradle
@@ -5,3 +5,18 @@ plugins {
 ext.humanName = "Tegral Core"
 ext.description = "Contains a few common Tegral classes, annotations and interfaces required by all other Tegral modules"
 ext.url = "https://tegral.zoroark.guru/docs/core"
+
+task generateKotlin(type: Copy) {
+    def templateContext = [version: project.version]
+    inputs.properties templateContext
+    from 'src/template/kotlin'
+    into "$buildDir/generated/kotlin"
+    expand templateContext
+}
+
+sourceSets {
+    main.kotlin.srcDirs += "$buildDir/generated/kotlin"
+}
+
+compileKotlin.dependsOn generateKotlin
+licenseCheck.dependsOn generateKotlin
