Fix dependency task name following version generation

--- a/tegral-core/build.gradle
+++ b/tegral-core/build.gradle
@@ -19,4 +19,4 @@ sourceSets {
 }
 
 compileKotlin.dependsOn generateKotlin
-licenseCheck.dependsOn generateKotlin
+checkLicenseMain.dependsOn generateKotlin
