--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'tegral-catalog',
         'tegral-di:tegral-di-test-mockk',
         'tegral-featureful',
         'tegral-logging',
+        'tegral-openapi:tegral-openapi-dsl',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
         'tegral-web:tegral-web-appdefaults',
