--- a/tegral-openapi/tegral-openapi-dsl/build.gradle
+++ b/tegral-openapi/tegral-openapi-dsl/build.gradle
@@ -7,6 +7,6 @@ dependencies {
     api libs.swaggerCore.core
 }
 
-ext.humanName = "Tegral Featureful"
-ext.description = "Contains common classes for writing Tegral features that will get integrated in main applications."
-ext.url = "https://tegral.zoroark.guru/docs/core/featureful"
+ext.humanName = "Tegral OpenAPI DSL"
+ext.description = "Provides a DSL for creating OpenAPI 3 documents."
+ext.url = "https://tegral.zoroark.guru" // TODO
