--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,9 @@ include 'tegral-catalog',
         'tegral-featureful',
         'tegral-logging',
         'tegral-openapi:tegral-openapi-dsl',
+        'tegral-openapi:tegral-openapi-scriptdef',
+        'tegral-openapi:tegral-openapi-scripthost',
+        'tegral-openapi:tegral-openapi-cli',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
         'tegral-web:tegral-web-appdefaults',
