--- a/settings.gradle
+++ b/settings.gradle
@@ -8,10 +8,11 @@ include 'tegral-catalog',
         'tegral-di:tegral-di-test-mockk',
         'tegral-featureful',
         'tegral-logging',
+        'tegral-openapi:tegral-openapi-cli',
         'tegral-openapi:tegral-openapi-dsl',
+        'tegral-openapi:tegral-openapi-ktor',
         'tegral-openapi:tegral-openapi-scriptdef',
         'tegral-openapi:tegral-openapi-scripthost',
-        'tegral-openapi:tegral-openapi-cli',
         'tegral-services:tegral-services-api',
         'tegral-services:tegral-services-feature',
         'tegral-web:tegral-web-appdefaults',
